docs/blueprints/compiler/wrdcBison.output
Terminals unused in grammar

   tdef
   twith
   tret
   tretfun
   tretif
   tretwith
   tretfor
   tfrom
   tagain
   tprop
   timport
   taka
   tthis
   tme
   tgot
   tnode
   tnull
   tsuper
   tout
   ":="
   "+="
   "-="
   "/="
   "*="
   "%="
   "^="


State 14 충돌: 8 쉬프트/리듀스
State 22 충돌: 1 쉬프트/리듀스
State 24 충돌: 14 쉬프트/리듀스
State 60 충돌: 1 쉬프트/리듀스
State 64 충돌: 14 쉬프트/리듀스
State 65 충돌: 14 쉬프트/리듀스
State 66 충돌: 14 쉬프트/리듀스
State 67 충돌: 14 쉬프트/리듀스
State 68 충돌: 14 쉬프트/리듀스
State 69 충돌: 14 쉬프트/리듀스
State 70 충돌: 8 쉬프트/리듀스
State 71 충돌: 8 쉬프트/리듀스
State 72 충돌: 8 쉬프트/리듀스
State 73 충돌: 8 쉬프트/리듀스
State 74 충돌: 8 쉬프트/리듀스
State 75 충돌: 8 쉬프트/리듀스
State 76 충돌: 14 쉬프트/리듀스
State 77 충돌: 14 쉬프트/리듀스
State 78 충돌: 14 쉬프트/리듀스
State 79 충돌: 14 쉬프트/리듀스
State 80 충돌: 14 쉬프트/리듀스
State 81 충돌: 14 쉬프트/리듀스
State 82 충돌: 14 쉬프트/리듀스
State 83 충돌: 14 쉬프트/리듀스
State 84 충돌: 14 쉬프트/리듀스
State 85 충돌: 8 쉬프트/리듀스


문법

    0 $accept: tfile $end

    1 telseBlock: teol telse teol tindentBlock

    2 telifBlock: teol telif tbranch

    3 telifBlocks: telifBlock
    4            | telifBlocks telifBlock

    5 tbranch: trhsexpr teol tindentBlock

    6 termIf: tif tbranch telifBlocks telseBlock
    7       | tif tbranch telifBlocks
    8       | tif tbranch telseBlock
    9       | tif tbranch

   10 trhsexpr: tinteger
   11         | tbool
   12         | tfloat
   13         | tstr
   14         | tchar
   15         | ttlist
   16         | tlhsexpr
   17         | trhsexpr '+' trhsexpr
   18         | trhsexpr '-' trhsexpr
   19         | trhsexpr '*' trhsexpr
   20         | trhsexpr '/' trhsexpr
   21         | trhsexpr '%' trhsexpr
   22         | trhsexpr '^' trhsexpr
   23         | trhsexpr '<' trhsexpr
   24         | trhsexpr topLessEqual trhsexpr
   25         | trhsexpr '>' trhsexpr
   26         | trhsexpr topMoreEqual trhsexpr
   27         | trhsexpr topEqual trhsexpr
   28         | trhsexpr topRefEqual trhsexpr
   29         | trhsexpr topNotEqual trhsexpr
   30         | trhsexpr topNotRefEqual trhsexpr
   31         | tcast
   32         | tfor tidentifier tin trhsexpr teol tindentBlock
   33         | termIf
   34         | tfunc

   35 tlhsexpr: tidentifier
   36         | tlhsexpr '=' trhsexpr
   37         | tlhsexpr topDefAssign trhsexpr
   38         | tlhsexpr topPlusAssign trhsexpr
   39         | tlhsexpr topMinusAssign trhsexpr
   40         | tlhsexpr topSquareAssign trhsexpr
   41         | tlhsexpr topDivideAssign trhsexpr
   42         | tlhsexpr topModAssign trhsexpr
   43         | tlhsexpr topPowAssign trhsexpr

   44 tcast: tidentifier trhsexpr

   45 targs: trhsexpr
   46      | targs ',' trhsexpr

   47 ttlist: '(' targs ')'
   48       | '(' ')'

   49 tfunc: tfuncname ttlist

   50 tstmt: trhsexpr teol
   51      | teol
   52      | trhsexpr teof

   53 tblock: tstmt
   54       | tblock tstmt

   55 tindentBlock: tindent tblock tdedent

   56 tfile: tblock teof


Terminals, with rules where they appear

$end (0) 0
'%' (37) 21
'(' (40) 47 48
')' (41) 47 48
'*' (42) 19
'+' (43) 17
',' (44) 46
'-' (45) 18
'/' (47) 20
'<' (60) 23
'=' (61) 36
'>' (62) 25
'^' (94) 22
error (256)
tfor (258) 32
tdef (259)
twith (260)
tret (261)
tretfun (262)
tretif (263)
tretwith (264)
tretfor (265)
tif (266) 6 7 8 9
telse (267) 1
telif (268) 2
tfrom (269)
tagain (270)
tprop (271)
timport (272)
taka (273)
tthis (274)
tme (275)
tgot (276)
tnode (277)
tnull (278)
tsuper (279)
tout (280)
tin (281) 32
tindent (282) 55
tdedent (283) 55
tinteger (284) 10
teof (285) 52 56
tfloat (286) 12
tbool (287) 11
tchar (288) 14
tstr (289) 13
tidentifier (290) 32 35 44
tfuncname (291) 49
teol (292) 1 2 5 32 50 51
topDefAssign (293) 37
topMinusAssign (294) 39
topSquareAssign (295) 40
topDivideAssign (296) 41
topModAssign (297) 42
topPowAssign (298) 43
topLessEqual (299) 24
topMoreEqual (300) 26
topEqual (301) 27
topRefEqual (302) 28
topNotEqual (303) 29
topNotRefEqual (304) 30
topPlusAssign (305) 38
":=" (306)
"+=" (307)
"-=" (308)
"/=" (309)
"*=" (310)
"%=" (311)
"^=" (312)


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
telseBlock (71)
    on left: 1, on right: 6 8
telifBlock (72)
    on left: 2, on right: 3 4
telifBlocks (73)
    on left: 3 4, on right: 4 6 7
tbranch (74)
    on left: 5, on right: 2 6 7 8 9
termIf (75)
    on left: 6 7 8 9, on right: 33
trhsexpr (76)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34, on right: 5 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 32 36 37 38 39 40 41 42 43 44 45 46 50 52
tlhsexpr (77)
    on left: 35 36 37 38 39 40 41 42 43, on right: 16 36 37 38 39 40
    41 42 43
tcast (78)
    on left: 44, on right: 31
targs (79)
    on left: 45 46, on right: 46 47
ttlist (80)
    on left: 47 48, on right: 15 49
tfunc (81)
    on left: 49, on right: 34
tstmt (82)
    on left: 50 51 52, on right: 53 54
tblock (83)
    on left: 53 54, on right: 54 55 56
tindentBlock (84)
    on left: 55, on right: 1 5 32
tfile (85)
    on left: 56, on right: 0


State 0

    0 $accept: . tfile $end

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    teol         shift, and go to state 10
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 13
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17
    tstmt     go to state 18
    tblock    go to state 19
    tfile     go to state 20


State 1

   32 trhsexpr: tfor . tidentifier tin trhsexpr teol tindentBlock

    tidentifier  shift, and go to state 21


State 2

    6 termIf: tif . tbranch telifBlocks telseBlock
    7       | tif . tbranch telifBlocks
    8       | tif . tbranch telseBlock
    9       | tif . tbranch

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    tbranch   go to state 22
    termIf    go to state 12
    trhsexpr  go to state 23
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 3

   10 trhsexpr: tinteger .

    $default  reduce using rule 10 (trhsexpr)


State 4

   12 trhsexpr: tfloat .

    $default  reduce using rule 12 (trhsexpr)


State 5

   11 trhsexpr: tbool .

    $default  reduce using rule 11 (trhsexpr)


State 6

   14 trhsexpr: tchar .

    $default  reduce using rule 14 (trhsexpr)


State 7

   13 trhsexpr: tstr .

    $default  reduce using rule 13 (trhsexpr)


State 8

   35 tlhsexpr: tidentifier .
   44 tcast: tidentifier . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    $default  reduce using rule 35 (tlhsexpr)

    termIf    go to state 12
    trhsexpr  go to state 24
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 9

   49 tfunc: tfuncname . ttlist

    '('  shift, and go to state 11

    ttlist  go to state 25


State 10

   51 tstmt: teol .

    $default  reduce using rule 51 (tstmt)


State 11

   47 ttlist: '(' . targs ')'
   48       | '(' . ')'

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11
    ')'          shift, and go to state 26

    termIf    go to state 12
    trhsexpr  go to state 27
    tlhsexpr  go to state 14
    tcast     go to state 15
    targs     go to state 28
    ttlist    go to state 16
    tfunc     go to state 17


State 12

   33 trhsexpr: termIf .

    $default  reduce using rule 33 (trhsexpr)


State 13

   17 trhsexpr: trhsexpr . '+' trhsexpr
   18         | trhsexpr . '-' trhsexpr
   19         | trhsexpr . '*' trhsexpr
   20         | trhsexpr . '/' trhsexpr
   21         | trhsexpr . '%' trhsexpr
   22         | trhsexpr . '^' trhsexpr
   23         | trhsexpr . '<' trhsexpr
   24         | trhsexpr . topLessEqual trhsexpr
   25         | trhsexpr . '>' trhsexpr
   26         | trhsexpr . topMoreEqual trhsexpr
   27         | trhsexpr . topEqual trhsexpr
   28         | trhsexpr . topRefEqual trhsexpr
   29         | trhsexpr . topNotEqual trhsexpr
   30         | trhsexpr . topNotRefEqual trhsexpr
   50 tstmt: trhsexpr . teol
   52      | trhsexpr . teof

    teof            shift, and go to state 29
    teol            shift, and go to state 30
    topLessEqual    shift, and go to state 31
    topMoreEqual    shift, and go to state 32
    topEqual        shift, and go to state 33
    topRefEqual     shift, and go to state 34
    topNotEqual     shift, and go to state 35
    topNotRefEqual  shift, and go to state 36
    '%'             shift, and go to state 37
    '^'             shift, and go to state 38
    '+'             shift, and go to state 39
    '-'             shift, and go to state 40
    '*'             shift, and go to state 41
    '/'             shift, and go to state 42
    '<'             shift, and go to state 43
    '>'             shift, and go to state 44


State 14

   16 trhsexpr: tlhsexpr .
   36 tlhsexpr: tlhsexpr . '=' trhsexpr
   37         | tlhsexpr . topDefAssign trhsexpr
   38         | tlhsexpr . topPlusAssign trhsexpr
   39         | tlhsexpr . topMinusAssign trhsexpr
   40         | tlhsexpr . topSquareAssign trhsexpr
   41         | tlhsexpr . topDivideAssign trhsexpr
   42         | tlhsexpr . topModAssign trhsexpr
   43         | tlhsexpr . topPowAssign trhsexpr

    topDefAssign     shift, and go to state 45
    topMinusAssign   shift, and go to state 46
    topSquareAssign  shift, and go to state 47
    topDivideAssign  shift, and go to state 48
    topModAssign     shift, and go to state 49
    topPowAssign     shift, and go to state 50
    topPlusAssign    shift, and go to state 51
    '='              shift, and go to state 52

    topDefAssign     [reduce using rule 16 (trhsexpr)]
    topMinusAssign   [reduce using rule 16 (trhsexpr)]
    topSquareAssign  [reduce using rule 16 (trhsexpr)]
    topDivideAssign  [reduce using rule 16 (trhsexpr)]
    topModAssign     [reduce using rule 16 (trhsexpr)]
    topPowAssign     [reduce using rule 16 (trhsexpr)]
    topPlusAssign    [reduce using rule 16 (trhsexpr)]
    '='              [reduce using rule 16 (trhsexpr)]
    $default         reduce using rule 16 (trhsexpr)


State 15

   31 trhsexpr: tcast .

    $default  reduce using rule 31 (trhsexpr)


State 16

   15 trhsexpr: ttlist .

    $default  reduce using rule 15 (trhsexpr)


State 17

   34 trhsexpr: tfunc .

    $default  reduce using rule 34 (trhsexpr)


State 18

   53 tblock: tstmt .

    $default  reduce using rule 53 (tblock)


State 19

   54 tblock: tblock . tstmt
   56 tfile: tblock . teof

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    teof         shift, and go to state 53
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    teol         shift, and go to state 10
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 13
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17
    tstmt     go to state 54


State 20

    0 $accept: tfile . $end

    $end  shift, and go to state 55


State 21

   32 trhsexpr: tfor tidentifier . tin trhsexpr teol tindentBlock

    tin  shift, and go to state 56


State 22

    6 termIf: tif tbranch . telifBlocks telseBlock
    7       | tif tbranch . telifBlocks
    8       | tif tbranch . telseBlock
    9       | tif tbranch .

    teol  shift, and go to state 57

    teol      [reduce using rule 9 (termIf)]
    $default  reduce using rule 9 (termIf)

    telseBlock   go to state 58
    telifBlock   go to state 59
    telifBlocks  go to state 60


State 23

    5 tbranch: trhsexpr . teol tindentBlock
   17 trhsexpr: trhsexpr . '+' trhsexpr
   18         | trhsexpr . '-' trhsexpr
   19         | trhsexpr . '*' trhsexpr
   20         | trhsexpr . '/' trhsexpr
   21         | trhsexpr . '%' trhsexpr
   22         | trhsexpr . '^' trhsexpr
   23         | trhsexpr . '<' trhsexpr
   24         | trhsexpr . topLessEqual trhsexpr
   25         | trhsexpr . '>' trhsexpr
   26         | trhsexpr . topMoreEqual trhsexpr
   27         | trhsexpr . topEqual trhsexpr
   28         | trhsexpr . topRefEqual trhsexpr
   29         | trhsexpr . topNotEqual trhsexpr
   30         | trhsexpr . topNotRefEqual trhsexpr

    teol            shift, and go to state 61
    topLessEqual    shift, and go to state 31
    topMoreEqual    shift, and go to state 32
    topEqual        shift, and go to state 33
    topRefEqual     shift, and go to state 34
    topNotEqual     shift, and go to state 35
    topNotRefEqual  shift, and go to state 36
    '%'             shift, and go to state 37
    '^'             shift, and go to state 38
    '+'             shift, and go to state 39
    '-'             shift, and go to state 40
    '*'             shift, and go to state 41
    '/'             shift, and go to state 42
    '<'             shift, and go to state 43
    '>'             shift, and go to state 44


State 24

   17 trhsexpr: trhsexpr . '+' trhsexpr
   18         | trhsexpr . '-' trhsexpr
   19         | trhsexpr . '*' trhsexpr
   20         | trhsexpr . '/' trhsexpr
   21         | trhsexpr . '%' trhsexpr
   22         | trhsexpr . '^' trhsexpr
   23         | trhsexpr . '<' trhsexpr
   24         | trhsexpr . topLessEqual trhsexpr
   25         | trhsexpr . '>' trhsexpr
   26         | trhsexpr . topMoreEqual trhsexpr
   27         | trhsexpr . topEqual trhsexpr
   28         | trhsexpr . topRefEqual trhsexpr
   29         | trhsexpr . topNotEqual trhsexpr
   30         | trhsexpr . topNotRefEqual trhsexpr
   44 tcast: tidentifier trhsexpr .

    topLessEqual    shift, and go to state 31
    topMoreEqual    shift, and go to state 32
    topEqual        shift, and go to state 33
    topRefEqual     shift, and go to state 34
    topNotEqual     shift, and go to state 35
    topNotRefEqual  shift, and go to state 36
    '%'             shift, and go to state 37
    '^'             shift, and go to state 38
    '+'             shift, and go to state 39
    '-'             shift, and go to state 40
    '*'             shift, and go to state 41
    '/'             shift, and go to state 42
    '<'             shift, and go to state 43
    '>'             shift, and go to state 44

    topLessEqual    [reduce using rule 44 (tcast)]
    topMoreEqual    [reduce using rule 44 (tcast)]
    topEqual        [reduce using rule 44 (tcast)]
    topRefEqual     [reduce using rule 44 (tcast)]
    topNotEqual     [reduce using rule 44 (tcast)]
    topNotRefEqual  [reduce using rule 44 (tcast)]
    '%'             [reduce using rule 44 (tcast)]
    '^'             [reduce using rule 44 (tcast)]
    '+'             [reduce using rule 44 (tcast)]
    '-'             [reduce using rule 44 (tcast)]
    '*'             [reduce using rule 44 (tcast)]
    '/'             [reduce using rule 44 (tcast)]
    '<'             [reduce using rule 44 (tcast)]
    '>'             [reduce using rule 44 (tcast)]
    $default        reduce using rule 44 (tcast)


State 25

   49 tfunc: tfuncname ttlist .

    $default  reduce using rule 49 (tfunc)


State 26

   48 ttlist: '(' ')' .

    $default  reduce using rule 48 (ttlist)


State 27

   17 trhsexpr: trhsexpr . '+' trhsexpr
   18         | trhsexpr . '-' trhsexpr
   19         | trhsexpr . '*' trhsexpr
   20         | trhsexpr . '/' trhsexpr
   21         | trhsexpr . '%' trhsexpr
   22         | trhsexpr . '^' trhsexpr
   23         | trhsexpr . '<' trhsexpr
   24         | trhsexpr . topLessEqual trhsexpr
   25         | trhsexpr . '>' trhsexpr
   26         | trhsexpr . topMoreEqual trhsexpr
   27         | trhsexpr . topEqual trhsexpr
   28         | trhsexpr . topRefEqual trhsexpr
   29         | trhsexpr . topNotEqual trhsexpr
   30         | trhsexpr . topNotRefEqual trhsexpr
   45 targs: trhsexpr .

    topLessEqual    shift, and go to state 31
    topMoreEqual    shift, and go to state 32
    topEqual        shift, and go to state 33
    topRefEqual     shift, and go to state 34
    topNotEqual     shift, and go to state 35
    topNotRefEqual  shift, and go to state 36
    '%'             shift, and go to state 37
    '^'             shift, and go to state 38
    '+'             shift, and go to state 39
    '-'             shift, and go to state 40
    '*'             shift, and go to state 41
    '/'             shift, and go to state 42
    '<'             shift, and go to state 43
    '>'             shift, and go to state 44

    $default  reduce using rule 45 (targs)


State 28

   46 targs: targs . ',' trhsexpr
   47 ttlist: '(' targs . ')'

    ','  shift, and go to state 62
    ')'  shift, and go to state 63


State 29

   52 tstmt: trhsexpr teof .

    $default  reduce using rule 52 (tstmt)


State 30

   50 tstmt: trhsexpr teol .

    $default  reduce using rule 50 (tstmt)


State 31

   24 trhsexpr: trhsexpr topLessEqual . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 64
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 32

   26 trhsexpr: trhsexpr topMoreEqual . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 65
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 33

   27 trhsexpr: trhsexpr topEqual . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 66
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 34

   28 trhsexpr: trhsexpr topRefEqual . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 67
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 35

   29 trhsexpr: trhsexpr topNotEqual . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 68
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 36

   30 trhsexpr: trhsexpr topNotRefEqual . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 69
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 37

   21 trhsexpr: trhsexpr '%' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 70
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 38

   22 trhsexpr: trhsexpr '^' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 71
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 39

   17 trhsexpr: trhsexpr '+' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 72
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 40

   18 trhsexpr: trhsexpr '-' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 73
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 41

   19 trhsexpr: trhsexpr '*' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 74
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 42

   20 trhsexpr: trhsexpr '/' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 75
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 43

   23 trhsexpr: trhsexpr '<' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 76
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 44

   25 trhsexpr: trhsexpr '>' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 77
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 45

   37 tlhsexpr: tlhsexpr topDefAssign . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 78
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 46

   39 tlhsexpr: tlhsexpr topMinusAssign . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 79
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 47

   40 tlhsexpr: tlhsexpr topSquareAssign . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 80
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 48

   41 tlhsexpr: tlhsexpr topDivideAssign . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 81
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 49

   42 tlhsexpr: tlhsexpr topModAssign . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 82
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 50

   43 tlhsexpr: tlhsexpr topPowAssign . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 83
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 51

   38 tlhsexpr: tlhsexpr topPlusAssign . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 84
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 52

   36 tlhsexpr: tlhsexpr '=' . trhsexpr

    tfor         shift, and go to state 1
    tif          shift, and go to state 2
    tinteger     shift, and go to state 3
    tfloat       shift, and go to state 4
    tbool        shift, and go to state 5
    tchar        shift, and go to state 6
    tstr         shift, and go to state 7
    tidentifier  shift, and go to state 8
    tfuncname    shift, and go to state 9
    '('          shift, and go to state 11

    termIf    go to state 12
    trhsexpr  go to state 85
    tlhsexpr  go to state 14
    tcast     go to state 15
    ttlist    go to state 16
    tfunc     go to state 17


State 53

   56 tfile: tblock teof .

    $default  reduce using rule 56 (tfile)


State 54

   54 tblock: tblock tstmt .

    $default  reduce using rule 54 (tblock)


State 55
